# CMPE-131-Project-The-Thrifty-Backpacker

./: .gitignore  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: bookings.py  search.py  tenants.py  trip.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/middleware/: tenant.py
backend/app/models/: booking.py  booking_cache.py  tenant.py  user.py
backend/app/schemas/: attraction.py  auth.py  booking.py  flight.py  hotel.py  tenant.py  trip.py
backend/app/services/: rapidapi.py
backend/scripts/: seed.py
docs/: README.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: ActivityFilter.vue  AppHeader.vue  AttractionCard.vue  FlightCard.vue  HotelCard.vue  TripTotalWidget.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js  tenant.js  trip.js
frontend/src/views/: DashboardView.vue  LoginView.vue  ResultsView.vue  SearchView.vue  SignupView.vue
